# Chess_Engine

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  engine.h  move.h  move_generation.h
notes/: Bitboard_Setup.md
src/: board.cpp  engine.cpp  main.cpp  move.cpp  move_generation.cpp
tests/: board_and_engine.cpp
